--- a/lib/processor/Cargo.toml
+++ b/lib/processor/Cargo.toml
@@ -10,6 +10,4 @@ serde = { version = "1.0.105", features = ["derive"] }
 
 common = { path = "../../common" }
 models = { path = "../models" }
-store = { path = "../store" }
-helpers = { path = "../helpers" }
-sip-helpers = { path = "../sip-helpers" }
+//store = { path = "../store" }
