--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,11 @@ tokio = { version = "0.2.13", features = ["full"] }
 serde = { version = "1.0.105", features = ["derive"] }
 
 common = { path = "common" }
-helpers = { path = "lib/helpers" }
 models = { path = "lib/models" }
-processor = { path = "lib/processor" }
+#processor = { path = "lib/processor" }
+processor2 = { path = "lib/processor2" }
 server = { path = "lib/server" }
-store = { path = "lib/store" }
-sip-helpers = { path = "lib/sip-helpers" }
+#store = { path = "lib/store" }
 rsip = { path = "lib/rsip" }
 
 [dev-dependencies]
@@ -34,6 +33,5 @@ testing_logger = "0.1.1"
 
 [workspace]
 members = [
-  "common", "lib/helpers", "lib/models", "lib/processor", "lib/server",
-  "lib/store", "lib/sip-helpers", "lib/rsip"
+  "common", "lib/models", "lib/processor2", "lib/server", "lib/rsip"
 ]
