--- a/lib/processor2/Cargo.toml
+++ b/lib/processor2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "processor2"
 version = "0.1.0"
 authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
 edition = "2018"
@@ -9,5 +9,6 @@ tokio = { version = "0.2.13", features = ["full"] }
 serde = { version = "1.0.105", features = ["derive"] }
 
 common = { path = "../../common" }
-processor2 = { path = "../processor2" }
 models = { path = "../models" }
+rsip = { path = "../rsip" }
+#store = { path = "../store" }
